# gpgpu_gameoflife

./: CMakeLists.txt  README.md
src/: Common.h  GameOfLife.cpp  cl.hpp
src/kernels/: programs.cl
